added digital stopwatch

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,14 @@
     <section id='stopwatch-container'>
       <section id="digital">00:00:00</section>
       <section class="flex-container">
-        <button class="flex-item">start</button>
-        <button class="flex-item">stop</button>
-        <button class="flex-item">reset</button>
-        <button class="flex-item">split</button>
+        <button id="start" class="flex-item">start</button>
+        <button id="stop" class="flex-item">stop</button>
+        <button id="reset" class="flex-item">reset</button>
+        <button id="split" class="flex-item">split</button>
       </section>
+    </section>
+    <section id="split-container">
+      <h1>Splits</h1>
     </section>
   </body>
 </html>
